--- a/views/layout.tt
+++ b/views/layout.tt
@@ -156,7 +156,13 @@
         displayed when editing a record. If no conditions are defined, then the
         field will always displayed.</p>
 
-    <div id="displayConditionsBuilder"></div>
+    <div id="displayConditionsBuilder"
+        data-test="yoyoyo"
+        [% IF column.display_fields.as_json AND NOT column.display_fields.as_json.match('^[{}\s]*$') %]
+        data-filter-base="[% column.display_fields.base64 %]"
+        [% END %]
+        data-filters='[[% FOR field IN all_columns %]{"id": "[% field.id %]", "label": "[% field.name | html_entity %]", "type": "string"}[% IF NOT loop.last %],[% END %][% END %]]'
+    ></div>
     <input type="hidden" id="displayConditions" name="display_fields">
     <p>Tip: You can use patterns [% whats_this('modalhelp_match') %] in your display conditions.</p>
     </section>
@@ -175,12 +181,12 @@
             </div>
             <h4>Tree nodes:</h4>
             <div class="form-group">
-                    <button class="btn btn-success btn-sm" onclick="demo_create();" type="button">Add a node</button>
-                    <button class="btn btn-warning btn-sm" onclick="demo_rename();" type="button">Rename</button>
-                    <button class="btn btn-danger btn-sm" onclick="demo_delete();" type="button">Delete</button>
+                    <button id="btnAddNode" class="btn btn-success btn-sm" type="button">Add a node</button>
+                    <button id="btnRenameNode" class="btn btn-warning btn-sm" type="button">Rename</button>
+                    <button id="btnDeleteNode" class="btn btn-danger btn-sm" type="button">Delete</button>
                     <button class="btn btn-info btn-sm" onclick="$('#jstree_demo_div').jstree('open_all');" type="button">Expand tree</button>
                     <button class="btn btn-info btn-sm" onclick="$('#jstree_demo_div').jstree('close_all');" type="button">Collapse tree</button>
-                    <div id="jstree_demo_div"></div>
+                    <div id="jstree_demo_div" data-layout-identifier="[% layout.identifier %]" data-column-id="[% column.id %]" data-csrf-token="[% csrf_token %]"></div>
             </div>
         [% ELSE %]
             <p>Use a tree to structure the values that users can select into categories and sub-categories.</p>
@@ -206,7 +212,7 @@
                     [% UNLESS enumval.deleted %]
                     <div class="request-row">
                         <p>
-                            [%# XXX hacky formatting - to be fixed %]
+                            [%# XXX hacky formatting - to be fixed ssss %]
                             <input type="hidden" name="enumval_id" value="[% enumval.id %]">
                             <input type="text" class="form-control" style="width:80%; display:inline" name="enumval" value="[% enumval.value | html_entity %]">
                             <button type="button" class="close closeme" style="float:none">&times;</button>
@@ -295,7 +301,11 @@
                     </div>
                     <div class="form-group">
                             <label for="builder[% instance_layout.instance_id %]">Apply the following filters to records in the selected table:</label>
-                            <div id="builder[% instance_layout.instance_id %]"></div>
+                            <div id="builder[% instance_layout.instance_id %]"
+                                [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') AND column.refers_to_instance_id == instance_layout.instance_id %]
+                                data-filter-base="[% column.filter.base64 %]"
+                                [% END %]
+                            ></div>
                     </div>
                 </div>
             [% END %]
@@ -660,187 +670,8 @@
     </table>
 [% END %]
 
-[% BLOCK javascript %]
-    <script type="text/javascript">
-        var jscode='[% FILTER remove('\n+') %]
-            [% FILTER replace('\'', '\\\'') %]
-
-            $(document).on("click", ".cloneme", function() {
-                var parent = $(this).parents('.permission_row');
-                var cloned = parent.clone(true);
-                cloned.removeAttr('id').insertAfter(parent);
-                cloned.find(".datepicker").datepicker({format: "[% config.dateformat_datepicker %]", autoclose: true});
-            });
-            $('.removeme').click(function() {
-                var parent = $(this).parents('.permission_row');
-                if (parent.siblings(".permission_row").length > 0) {
-                    parent.remove();
-                }
-            });
-
-            function demo_delete() {
-                var ref = $('#jstree_demo_div').jstree(true),
-                    sel = ref.get_selected();
-                if(!sel.length) { return false; }
-                ref.delete_node(sel);
-            };
-            function demo_create() {
-                var ref = $('#jstree_demo_div').jstree(true),
-                    sel = ref.get_selected();
-                if(sel.length) {
-                    sel = sel[0];
-                } else {
-                    sel = '#';
-                }
-                sel = ref.create_node(sel, {"type":"file"});
-                if(sel) {
-                    ref.edit(sel);
-                }
-            };
-            function demo_rename() {
-                var ref = $('#jstree_demo_div').jstree(true),
-                    sel = ref.get_selected();
-                if(!sel.length) { return false; }
-                sel = sel[0];
-                ref.edit(sel);
-            };
-                $('#selectall').click(function() {
-                    if ($('.check_perm:checked').length == 7) {
-                        $('.check_perm').prop('checked', false);
-                    } else {
-                        $('.check_perm').prop('checked', true);
-                    }
-                });
-            $(document).ready(function () {
-                $('.sortable').sortable({
-                    handle: ".drag"
-                });
-                $('#jstree_demo_div').jstree({
-                    "core" : {
-                        "check_callback" : true,
-                        "force_text" : true,
-                        "themes" : { "stripes" : true },
-                        'data' : {
-                            'url' : function (node) {
-                                return '/[% layout.identifier %]/tree' + new Date().getTime() + '/[% column.id %]?' ;
-                            },
-                            'data' : function (node) {
-                                return { 'id' : node.id };
-                            }
-                        }
-                    },
-                });
-                $('div#legs').on('click','.closeme', function(){
-                    var count = $(".request-row").length;
-                    if (count < 2) return;
-                    $(this).parents('.request-row').remove();
-                });
-                $('div#legs').on('click','.add', function(){
-                    $(this).closest('#legs').find('.sortable').append('
-                        <div class="request-row">
-                            <p>
-                                [%# XXX hacky formatting - to be fixed %]
-                                <input type="hidden" name="enumval_id">
-                                <input type="text" class="form-control" style="width:80%; display:inline" name="enumval">
-                                <button type="button" class="close closeme" style="float:none">&times;</button>
-                                <span class="fa fa-hand-paper-o fa-lg use-icon-font close drag" style="float:none"></span>
-                            </p>
-                        </div>
-                    ' );
-                    $('.sortable').sortable('refresh');
-                });
-                $('#refers_to_instance_id').change(function(){
-                    var divid = '#instance_fields_' + $(this).val();
-                    $('.instance_fields').hide();
-                    $(divid).show();
-                });
-                $('#related_field_id').change(function(){
-                    var divid = $(this).find(':selected').data('instance_id');
-                    $('.autocur_instance').hide();
-                    $('#autocur_instance_' + divid).show();
-                });
-                $('#filval_related_field_id').change(function(){
-                    var divid = $(this).val();
-                    $('.filval_curval').hide();
-                    $('#filval_curval_' + divid).show();
-                });
-
-                [% FOREACH instance_layout IN instance_layouts %]
-                    [% PROCESS builder.tt builder_id = instance_layout.instance_id builder_layout = instance_layout filter_normal = column.filter filter_base64 = column.filter.base64 override_permissions = 1 %]
-                [% END %]
-                [% IF column.filter.as_json AND NOT column.filter.as_json.match('^[{}\s]*$') %]
-                    var data = base64.decode('[% column.filter.base64 %]');
-                    $('#builder[% column.refers_to_instance_id %]').queryBuilder('setRules',
-                        JSON.parse(data)
-                    );
-                [% END %]
-
-                $('#displayConditionsBuilder').queryBuilder({
-                    filters: [
-                        [% FOR field IN all_columns %]
-                            {
-                                id: '[% field.id %]',
-                                label: '[% field.name | html_entity %]',
-                                type: 'string',
-                            },
-                        [% END %]
-                    ],
-                    allow_groups: 0,
-                    operators: [
-                        {type: 'equal',            accept_values: true,  apply_to: ['string']},
-                        {type: 'contains',         accept_values: true,  apply_to: ['string']},
-                        {type: 'not_equal',        accept_values: true,  apply_to: ['string']},
-                        {type: 'not_contains',     accept_values: true,  apply_to: ['string']}
-                    ]
-                });
-                [% IF column.display_fields.as_json AND NOT column.display_fields.as_json.match('^[{}\s]*$') %]
-                    var data = base64.decode('[% column.display_fields.base64 %]');
-                    $('#displayConditionsBuilder').queryBuilder('setRules',
-                        JSON.parse(data)
-                    );
-                [% END %]
-
-                $('#submit_save').click(function() {
-
-                    var res = $('#displayConditionsBuilder').queryBuilder('getRules');
-                    $("#displayConditions").val(JSON.stringify(res, null, 2));
-
-                    var current_builder = "#builder" + $('#refers_to_instance_id').val();
-                    if( $('#jstree_demo_div').length && $('#jstree_demo_div').is(":visible") ) {
-                        var v =$("#jstree_demo_div").jstree(true).get_json('#', { 'flat': false });
-                        var mytext = JSON.stringify(v);
-                        $.ajax({
-                            async: false,
-                            type: "POST",
-                            url: "/[% layout.identifier %]/tree/[% column.id %]",
-                            data: {'data': mytext, csrf_token: '[% csrf_token %]' }
-                        }).done(function( data ) {
-                            alert( "Tree has been updated" );
-                        });
-                        return true;
-                    } else if ($(current_builder).is(":visible")) {
-                        UpdateFilter($(current_builder));
-                    }
-                    return true;
-                });
-
-                $('#type').on('change', function () {
-                    var $mf = $('#manage-fields');
-                    var current_type = $mf.data('column-type');
-                    var new_type = $(this).val();
-                    $mf.removeClass('column-type-' + current_type);
-                    $mf.addClass('column-type-' + new_type);
-                    $mf.data('column-type', new_type);
-                    if (new_type == 'rag' || new_type == 'intgr' || new_type == 'person') {
-                        $('#checkbox-multivalue').hide();
-                    } else {
-                        $('#checkbox-multivalue').show();
-                    }
-                }).trigger("change");
-            });
-    [% END %]
-    [% END %]';
-    </script>
+[% FOREACH instance_layout IN instance_layouts %]
+    [% PROCESS builder.tt builder_id = instance_layout.instance_id builder_layout = instance_layout filter_normal = column.filter filter_base64 = column.filter.base64 override_permissions = 1 %]
 [% END %]
 
 <form method="post">
@@ -875,7 +706,4 @@
 </div>
 </form>
 
-[%
-    PROCESS layout_modals;
-    PROCESS javascript;
-%]
+[% PROCESS layout_modals; %]
