--- a/views/view.tt
+++ b/views/view.tt
@@ -96,11 +96,14 @@
             </dl>
 
             <label>Filters:</label>
-            <div id="builder"></div>
+            <div id="builder"
+                data-base-filter='[% view_edit.filter.base64 %]'
+                data-use-json='[% view_edit.filter.as_json AND NOT view_edit.filter.as_json.match('^[{}\s]*$') %]'>
+            </div>
             <input id="filter" type="hidden" name="filter" value="[% view_edit.filter.as_json | html_entity %]">
 
             <label for="sorts">Sort the records in your view by:</label>
-            <div id="sorts">
+            <div id="sorts" data-sortrow='[% PROCESS sortrow %]'>
                 [% FOREACH sort IN view_edit.sorts %]
                     [% PROCESS sortrow %]
                 [% END %]
@@ -114,7 +117,7 @@
             </div>
 
             <label for="groups">Group the records in your view by:</label>
-            <div id="groups">
+            <div id="groups" data-grouprow='[% PROCESS grouprow %]'>
                 [% FOREACH group IN view_edit.groups %]
                     [% PROCESS grouprow %]
                 [% END %]
@@ -132,7 +135,7 @@
     <nav class="navbar navbar-default navbar-fixed-bottom" style="min-height:55px">
         <div class="container">
             <p></p>
-            <button id="saveview" type="submit" name="update" value="update" class="btn btn-primary" onclick="UpdateFilter()">
+            <button id="saveview" type="submit" name="update" value="update" class="btn btn-primary" >
                 Save
             </button>
             <a href="/[% layout.identifier %]/data" class="btn btn-default">Cancel</a>
@@ -169,52 +172,7 @@
         </div><!-- /.modal -->
 <p></p>
 
-<script type="text/javascript">
-    var jscode='[% FILTER remove('[\n\r]+') %]
-        [% FILTER replace('\'', '\\\'') %]
-        $('#selectall').click(function() {
-            $('.col_check').prop('checked', this.checked);
-        });
-        $('#global').change(function () {
-            $('#group_id_div').toggle(this.checked);
-        }).change();
-        $(document).ready(function () {
-            $('div#sorts').on('click','.closeme', function(){
-                var c = $(".request-row").length;
-                if (c < 1) return;
-                $(this).parents('.request-row').remove();
-            });
-            $('div#sorts').on('click','.add', function(){
-                $(this).parents('.sort-add').before( '
-                    [% PROCESS sortrow %]
-                ' );
-            });
-
-            $('div#groups').on('click','.closeme', function(){
-                var c = $(".request-row").length;
-                if (c < 1) return;
-                $(this).parents('.request-row').remove();
-            });
-            $('div#groups').on('click','.add', function(){
-                $(this).parents('.group-add').before( '
-                    [% PROCESS grouprow %]
-                ' );
-            });
-        }); 
-        [% INCLUDE builder.tt builder_layout = layout filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 include_previous = 1 %]
-        [% IF view_edit.filter.as_json AND NOT view_edit.filter.as_json.match('^[{}\s]*$') %]
-            var data = base64.decode('[% view_edit.filter.base64 %]');
-            $('#builder').queryBuilder('setRules',
-                JSON.parse(data)
-            );
-        [% END %]
-        function UpdateFilter() {
-            var res = $('#builder').queryBuilder('getRules');
-            $("#filter").val(JSON.stringify(res, null, 2));
-        };
-[% END %]
-[% END %]';
-</script>
+[% INCLUDE builder.tt builder_layout = layout filter_normal = view_edit.filter filter_base64 = view_edit.filter.base64 include_previous = 1 %]
 
 [% BLOCK sortrow %]
     <div class="row">
