--- a/views/layout.tt
+++ b/views/layout.tt
@@ -375,6 +375,7 @@
             <select class="form-control" name="return_type">
                 <option value="string" [% IF column.return_type == "string" %]selected[% END %]>String</option>
                 <option value="date" [% IF column.return_type == "date" %]selected[% END %]>Date</option>
+                <option value="daterange" [% IF column.return_type == "daterange" %]selected[% END %]>Date range</option>
                 <option value="integer" [% IF column.return_type == "integer" %]selected[% END %]>Integer</option>
                 <option value="numeric" [% IF column.return_type == "numeric" %]selected[% END %]>Decimal</option>
                 <option value="globe" [% IF column.return_type == "globe" %]selected[% END %]>Globe location</option>
