--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1770,8 +1770,8 @@ small.search_term {
   position: absolute;
 }
 
-[role=tooltip] .tooltip,
-[role=tooltip] + .tooltip {
+[role=tooltip]:not(.tooltip) .tooltip,
+[role=tooltip]:not(.tooltip) + .tooltip {
   padding: 0.5em;
   top: -2.7em;
   right: -5em;
