673 Style buttons as a-tags the same as button-tags

--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -992,6 +992,11 @@ select.input-lg {
   padding-right: 0;
 }
 
+a.btn {
+  text-decoration: none;
+  cursor: default;
+}
+
 /*
 .caret {
         display:inline-block;
