--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -448,6 +448,10 @@ select.input-lg {
         padding-left:0;
         padding-right:0;
 }
+a.btn {
+        text-decoration: none;
+        cursor: default;
+}
 /*
 .caret {
         display:inline-block;
