--- a/public/css/ctrlo-bootstrap.css
+++ b/public/css/ctrlo-bootstrap.css
@@ -1640,14 +1640,17 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 }
 
 /* Login page - Remember Username */
-.remember-me, .reset-password {
-  display: inline-block;
-  width: 48%;
-  vertical-align: top;
+.register,
+.reset-password {
+  padding-right: 0;
+  padding-left: 0;
+  margin-bottom: 15px;
 }
-
-.remember-me {
-  position: relative;
+@media (min-width: 767px) {
+  .register,
+.reset-password {
+    margin-top: 2em;
+  }
 }
 
 #remember {
