--- a/views/login.tt
+++ b/views/login.tt
@@ -34,36 +34,40 @@
                     <input type="hidden" name="csrf_token" value="[% csrf_token %]">
                     <h1>Please Sign In</h1>
                     <hr>
-                    <div class="form-group">
-                        <label for="username">Email address:</label>
-                        <input type="email" name="username" id="username" class="form-control input-lg" placeholder="name@example.com" value="[% username %]">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8 col-md-8">
+                            <div class="form-group">
+                                <label for="username">Email address:</label>
+                                <input type="email" name="username" id="username" class="form-control input-lg" placeholder="name@example.com" value="[% username %]">
+                            </div>
+                        </div>
+                        [% UNLESS site.hide_account_request %]
+                            <div class="col-xs-12 col-sm-4 col-md-4">
+                                <button type="button" class="btn btn-link register" data-toggle="modal" data-target="#modalregister">Request Account</button>
+                            </div>
+                        [% END %]
                     </div>
-                    <div class="form-group">
-                        <label for="password">Password:</label>
-                        <input type="password" name="password" id="password" class="form-control input-lg">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8 col-md-8">
+                            <div class="form-group">
+                                <label for="password">Password:</label>
+                                <input type="password" name="password" id="password" class="form-control input-lg">
+                            </div>
+                        </div>
+                        <div class="col-xs-12 col-sm-4 col-md-4">
+                            <button type="button" class="btn btn-link reset-password" data-toggle="modal" data-target="#modal-reset-password">Reset Password</button>
+                        </div>
                     </div>
-                    <div>
-                        <span class="remember-me">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-8 col-md-8">
                             <input type="checkbox" name="remember_me" id="remember" [% IF username %]checked="checked"[% END %] class="[% IF username %]remember--checked[% END %] visually-hidden-opacity">
                             <label for="remember">
                                 <span class="glyphicon glyphicon-check" aria-hidden="true"></span>
-                                Remember Username
+                                Remember email address
                             </label>
-                        </span>
-                        <span class="reset-password">
-                            <button type="button" class="btn btn-link pull-right" data-toggle="modal" data-target="#modal-reset-password">Reset Password</button>
-                        </span>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-6 col-sm-6 col-md-6">
+                            <hr>
                             <input type="submit" name="signin" class="btn btn-lg btn-success btn-block" value="Sign In">
                         </div>
-                        [% UNLESS site.hide_account_request %]
-                            <div class="col-xs-6 col-sm-6 col-md-6">
-                                <button type="button" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request Account</button>
-                            </div>
-                        [% END %]
                     </div>
             </form>
             </div>
