--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -499,8 +499,10 @@ select.input-lg {
 }
 .btn-group-vertical>.btn:first-child:not(:last-child) {
         border-top-right-radius:0px;
+        border-top-left-radius:0px;
 }
 .btn-group-vertical>.btn:last-child:not(:first-child) {
+        border-bottom-right-radius:0px;
         border-bottom-left-radius:0px;
 }
 [data-toggle="buttons"]>.btn>input[type="radio"],[data-toggle="buttons"]>.btn>input[type="checkbox"] {
