Add some spacing below the edit sidebar to support the navbar buttons

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -1482,6 +1482,10 @@ small.search_term {
     }
 }
 
+.edit-form__sidebar {
+    margin-bottom: 4em;
+}
+
 .input_holder .datepicker {
     padding-left: 1em;
 }
