--- a/views/snippets/record_edit.tt
+++ b/views/snippets/record_edit.tt
@@ -7,6 +7,7 @@
     [% IF layout.user_can("create_child") AND NOT record.parent_id AND layout.has_children %]
         <a class="btn btn-default" href="/[% layout.identifier %]/record/?child=[% record.current_id %]">Create child record</a>
     [% END %]
+    [% INCLUDE 'extension/record_edit_extra.tt' %]
     [% IF user.permission.link %]
         <a class="btn btn-default" href="/[% layout.identifier %]/link/[% record.current_id %]">Link record</a>
     [% END %]
