--- a/views/snippets/navigation.tt
+++ b/views/snippets/navigation.tt
@@ -183,9 +183,9 @@
             <li [% IF page=="data" %]class="active"[% END %]><a href="[% url.page %]/[% layout.identifier %]/data">See records</a></li>
             [% IF user_can_create %]
                 [% IF user.has_draft(layout.instance_id) %]
-                    <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/[% layout.identifier %]/edit/">Continue draft record</a></li>
+                    <li [% IF page=="" %]class="active"[% END %]><a href="[% url.page %]/[% layout.identifier %]/record/">Continue draft record</a></li>
                 [% ELSE %]
-                    <li class="record-add[% IF page=="" %] active[% END %]"><a href="[% url.page %]/[% layout.identifier %]/edit/">Add a record</a></li>
+                    <li class="record-add[% IF page=="" %] active[% END %]"><a href="[% url.page %]/[% layout.identifier %]/record/">Add a record</a></li>
                 [% END %]
             [% END %]
             [% IF layout.user_can("link") AND show_link %]
