Move internal columns from main record to metadata

--- a/sass/ctrlo-bootstrap.scss
+++ b/sass/ctrlo-bootstrap.scss
@@ -139,6 +139,9 @@ a.bg-primary:hover {
 dl {
         margin-bottom:21px;
 }
+dd {
+        margin-bottom:10px;
+}
 dt {
         font-weight:bold;
 }
